--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="image" data-name="Flowers"><span><img src="images/pinkflo.jpeg" alt=""></span></div>
       <div class="image" data-name="Car"><span><img src="images/bluesky.jpeg" alt=""></span></div>
       <div class="image" data-name="Food"><span><img src="images/pasta.jpeg" alt=""></span></div>
-      <div class="image" data-name="Food"><span><img src="images/coffee.jpeg" alt=""></span></div>
+      <div class="image" data-name="Food"><span><img src="images/cookie.jpeg" alt=""></span></div>
       <div class="image" data-name="Flowers"><span><img src="images/daffodil.jpeg" alt=""></span></div>
       <div class="image" data-name="Food"><span><img src="images/coffee.jpeg" alt=""></span></div>
       <div class="image" data-name="Food"><span><img src="images/momo.png" alt=""></span></div>
